[workspace]
members = [
    "rust/freshman",
    "rust/led",
    "rust/buzzer",
    "rust/control_button_led",
]

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction
debug = false   # No debug symbols
strip = true   # Strip all symbols
