[workspace]
members = [
    "rust/freshman",
    "rust/led",
    "rust/buzzer",
    "rust/control_button_led",
    "rust/light_sensor_control_buzzer",
    "rust/stm32_utils",
    "rust/oled_display_for_debug",
    "rust/through_beam_infrared_sensor_counter",
]

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction
debug = false   # No debug symbols
strip = true   # Strip all symbols
