[workspace]
members = [
    "rust/freshman",
    "rust/led",
    "rust/buzzer",
    "rust/control_button_led",
    "rust/light_sensor_control_buzzer",
    "rust/stm32_utils",
    "rust/oled_display_for_debug",
    "rust/through_beam_infrared_sensor_counter",
    "rust/rotated_encoder_counter",
    "rust/internal_clock_tim_counter",
    # "rust/external_clock_tim_counter", # TODO: no way to implement this in Rust with HAL API
    "rust/pwm_control_led",
    "rust/pwm_control_led_remap",
    "rust/button_pwm_control_sg90",
    "rust/button_pwm_control_motor",
]

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction
debug = false   # No debug symbols
strip = true   # Strip all symbols
